[tool.poetry]
name = "ramanchada2"
version = "0.0.10"
description = "A library for Raman spectroscopy harmonization"
authors = [
  "Georgi Georgiev <georgiev.georgi.st@gmail.com>",
  "Nina Jeliazkova <jeliazkova.nina@gmail.com>",
  "Luchesar ILIEV <luchesar.iliev@gmail.com>",
  "Evgeniy Marinov <marinov.evgeniy@gmail.com>",
  "Nicolás Coca López <nicolascocalopez@googlemail.com>",
  "Dirk Lellinger <dlellinger@users.sourceforge.net>",
]
maintainers = [
  "Luchesar Iliev <luchesar.iliev@gmail.com>",
  "Vedrin Jeliazkov <vedrin.jeliazkov@gmail.com>",
]
license = "MIT"
readme = "README.pypi.md"
repository = "https://github.com/h2020charisma/ramanchada2"
documentation = "https://h2020charisma.github.io/ramanchada2"
keywords = [
  "Raman",
  "Raman spectra",
  "spectroscopy",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.9"
brukeropusreader = "^1.3.4"
emd = "^0.7.0"
h5py = "^3.11.0"
lmfit = "^1.3.1"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
pydantic = "==1.*"
renishawWiRE = "^0.1.16"
scikit-learn = "^1.4.2"
scipy = ">=1.8.0"
spc-io = "~=0.0.2"
statsmodels = "^0.14.2"
uncertainties = "^3.1.7"

[tool.poetry.group.dev.dependencies]
tox = "^4.15.0"

[tool.poetry.group.jupyter]
optional = true

[tool.poetry.group.jupyter.dependencies]
jupyter = "^1.0.0"

[tool.poetry_bumpversion.file."src/ramanchada2/__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
